--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-markdown": "^9.0.0",
     "react-otp-input": "^3.0.4",
+    "react-player": "^2.16.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
